--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,28 +1,35 @@
-* {
-  box-sizing: border-box;
+/* CSSのリセット（消さないでください） */
+html, body,
+ul, ol, li,
+h1, h2, h3, h4, h5, h6, p, div {
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin: 0;
-  font-family: "Hiragino Kaku Gothic ProN";
+  font-family: 'Hiragino Kaku Gothic ProN W3', sans-serif;
+}
+
+li {
+  list-style: none;
 }
 
 a {
   text-decoration: none;
 }
 
-.container {
-  width: 100%;
-  padding: 0 15px;
-  margin: 0 auto;
-}
-
+/*ここからcssを書いていきましょう*/
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(top.png);
+  background-image: url(https://prog-8.com/images/html/advanced/top.png);
   background-size: cover;
   color: white;
   text-align: center;
+}
+
+.container {
+  width: 1170px;
+  margin: 0 auto;
 }
 
 .top-wrapper h1 {
@@ -33,20 +40,13 @@ a {
 
 .top-wrapper p {
   opacity: 0.7;
-  font-size: 16px;
-  margin-bottom: 40px;
-}
-
-.btn-wrapper {
-  text-align: center;
-}
-
-.btn-wrapper p {
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 .signup {
   background-color: #239b76;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .facebook {
@@ -64,7 +64,6 @@ a {
   display: inline-block;
   opacity: 0.8;
   border-radius: 4px;
-  text-align: center;
 }
 
 .btn:hover {
@@ -78,7 +77,7 @@ a {
 header {
   height: 65px;
   width: 100%;
-  background-color: rgba(34,49,52,0.9);
+  background-color: rgba(34, 49, 52, 0.9);
   position :fixed;
   top: 0;
   z-index: 10;
@@ -95,7 +94,12 @@ header {
 
 .header-right {
   float: right;
-  margin-right: -25px;
+  background-color: rgba(255, 255, 255, 0.3);
+  transition: all 0.5s;
+}
+
+.header-right:hover {
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .header-right a {
@@ -103,19 +107,10 @@ header {
   padding: 0 25px;
   color: white;
   display: block;
-  float: left;
-  transition: all 0.5s;
-}
-
-.header-right a:hover {
-  background-color: rgba(255,255,255,0.3);
 }
 
 .lesson-wrapper {
   height: 580px;
-  padding-bottom: 80px;
-  padding-left: 5%;
-  padding-right: 5%;
   background-color: #f7f7f7;
   text-align: center;
 }
@@ -141,7 +136,7 @@ header {
 
 .lesson-icon p {
   position: absolute;
-  top: 37%;
+  top: 44%;
   width: 100%;
   color: white;
 }
@@ -154,12 +149,7 @@ header {
   color: #b3aeb5;
 }
 
-.heading h3 {
-  font-weight: normal;
-}
-
 .message-wrapper {
-  border-bottom: 1px solid #eee;
   padding-bottom: 80px;
   text-align: center;
 }
@@ -168,7 +158,7 @@ header {
   padding: 15px 40px;
   background-color: #5dca88;
   cursor: pointer;
-  box-shadow: 0px 7px #1a7940;
+  box-shadow: 0 7px #1a7940;
 }
 
 .message:active {
@@ -178,7 +168,7 @@ header {
 }
 
 footer img {
-  width: 125px;
+  width: 124px;
 }
 
 footer p {
@@ -187,85 +177,6 @@ footer p {
 }
 
 footer {
-  padding-top: 30px;
-  padding-bottom: 20px;
-}
-
-.menu-icon {
-  color: white;
-  float: right;
-  font-size: 25px;
-  padding: 21px 0;
-  display: none;
-}
-
-.clear {
-  clear: left;
-}
-
-@media all and (max-width: 1000px) {
-  .lesson {
-    width: 50%;
-    margin-bottom: 50px;
-  }
-
-  .lesson-wrapper {
-    height: 990px;
-  }
-
-  footer {
-    text-align: center;
-  }
-}
-
-@media all and (max-width: 750px) {
-  .top-wrapper h1 {
-    font-size: 32px;
-  }
-
-  .heading h2 {
-    font-size: 20px;
-  }
-}
-
-@media all and (max-width: 670px) {
-  .header-right {
-    display: none;
-  }
-
-  .menu-icon {
-    display: block;
-  }
-
-  .top-wrapper .btn {
-    width: 100%;
-  }
-
-  .twitter {
-    margin-top: 10px;
-  }
-
-  .top-wrapper {
-    text-align: left;
-  }
-
-  .top-wrapper h1 {
-    font-size: 24px;
-  }
-
-  .top-wrapper p {
-    font-size: 14px;
-  }
-
-  .lesson {
-    width: 100%;
-  }
-
-  .lesson-wrapper {
-    height: 1700px;
-  }
-
-  .message-wrapper .btn {
-    width: 100%;
-  }
+  padding: 30px 0;
+  border-top: 1px solid #eee;
 }
