--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,35 +1,28 @@
-/* CSSのリセット（消さないでください） */
-html, body,
-ul, ol, li,
-h1, h2, h3, h4, h5, h6, p, div {
-  margin: 0;
-  padding: 0;
+* {
+  box-sizing: border-box;
 }
 
 body {
-  font-family: 'Hiragino Kaku Gothic ProN W3', sans-serif;
-}
-
-li {
-  list-style: none;
+  margin: 0;
+  font-family: "Hiragino Kaku Gothic ProN";
 }
 
 a {
   text-decoration: none;
 }
 
-/*ここからcssを書いていきましょう*/
+.container {
+  width: 100%;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(https://prog-8.com/images/html/advanced/top.png);
+  background-image: url(top.png);
   background-size: cover;
   color: white;
   text-align: center;
-}
-
-.container {
-  width: 1170px;
-  margin: 0 auto;
 }
 
 .top-wrapper h1 {
@@ -40,13 +33,20 @@ a {
 
 .top-wrapper p {
   opacity: 0.7;
-  margin-bottom: 15px;
+  font-size: 16px;
+  margin-bottom: 40px;
+}
+
+.btn-wrapper {
+  text-align: center;
+}
+
+.btn-wrapper p {
+  margin-bottom: 20px;
 }
 
 .signup {
   background-color: #239b76;
-  margin-top: 15px;
-  margin-bottom: 15px;
 }
 
 .facebook {
@@ -64,6 +64,7 @@ a {
   display: inline-block;
   opacity: 0.8;
   border-radius: 4px;
+  text-align: center;
 }
 
 .btn:hover {
@@ -77,7 +78,7 @@ a {
 header {
   height: 65px;
   width: 100%;
-  background-color: rgba(34, 49, 52, 0.9);
+  background-color: rgba(34,49,52,0.9);
   position :fixed;
   top: 0;
   z-index: 10;
@@ -94,12 +95,7 @@ header {
 
 .header-right {
   float: right;
-  background-color: rgba(255, 255, 255, 0.3);
-  transition: all 0.5s;
-}
-
-.header-right:hover {
-  background-color: rgba(255, 255, 255, 0.5);
+  margin-right: -25px;
 }
 
 .header-right a {
@@ -107,10 +103,19 @@ header {
   padding: 0 25px;
   color: white;
   display: block;
+  float: left;
+  transition: all 0.5s;
+}
+
+.header-right a:hover {
+  background-color: rgba(255,255,255,0.3);
 }
 
 .lesson-wrapper {
   height: 580px;
+  padding-bottom: 80px;
+  padding-left: 5%;
+  padding-right: 5%;
   background-color: #f7f7f7;
   text-align: center;
 }
@@ -136,7 +141,7 @@ header {
 
 .lesson-icon p {
   position: absolute;
-  top: 44%;
+  top: 37%;
   width: 100%;
   color: white;
 }
@@ -149,7 +154,12 @@ header {
   color: #b3aeb5;
 }
 
+.heading h3 {
+  font-weight: normal;
+}
+
 .message-wrapper {
+  border-bottom: 1px solid #eee;
   padding-bottom: 80px;
   text-align: center;
 }
@@ -158,7 +168,7 @@ header {
   padding: 15px 40px;
   background-color: #5dca88;
   cursor: pointer;
-  box-shadow: 0 7px #1a7940;
+  box-shadow: 0px 7px #1a7940;
 }
 
 .message:active {
@@ -168,7 +178,7 @@ header {
 }
 
 footer img {
-  width: 124px;
+  width: 125px;
 }
 
 footer p {
@@ -177,6 +187,85 @@ footer p {
 }
 
 footer {
-  padding: 30px 0;
-  border-top: 1px solid #eee;
+  padding-top: 30px;
+  padding-bottom: 20px;
+}
+
+.menu-icon {
+  color: white;
+  float: right;
+  font-size: 25px;
+  padding: 21px 0;
+  display: none;
+}
+
+.clear {
+  clear: left;
+}
+
+@media all and (max-width: 1000px) {
+  .lesson {
+    width: 50%;
+    margin-bottom: 50px;
+  }
+
+  .lesson-wrapper {
+    height: 990px;
+  }
+
+  footer {
+    text-align: center;
+  }
+}
+
+@media all and (max-width: 750px) {
+  .top-wrapper h1 {
+    font-size: 32px;
+  }
+
+  .heading h2 {
+    font-size: 20px;
+  }
+}
+
+@media all and (max-width: 670px) {
+  .header-right {
+    display: none;
+  }
+
+  .menu-icon {
+    display: block;
+  }
+
+  .top-wrapper .btn {
+    width: 100%;
+  }
+
+  .twitter {
+    margin-top: 10px;
+  }
+
+  .top-wrapper {
+    text-align: left;
+  }
+
+  .top-wrapper h1 {
+    font-size: 24px;
+  }
+
+  .top-wrapper p {
+    font-size: 14px;
+  }
+
+  .lesson {
+    width: 100%;
+  }
+
+  .lesson-wrapper {
+    height: 1700px;
+  }
+
+  .message-wrapper .btn {
+    width: 100%;
+  }
 }
